--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -29,5 +30,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.google.android.gms:play-services:9.0.2'
+    compile 'io.realm:realm-android:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
 
 }
